play around with GUI designer

--- a/src/main/java/com/hongshi/intern/GUIOperator.form
+++ b/src/main/java/com/hongshi/intern/GUIOperator.form
@@ -10,9 +10,10 @@
     <children>
       <component id="65faf" class="javax.swing.JLabel" binding="labelAcc">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <horizontalTextPosition value="4"/>
           <text value="Account"/>
         </properties>
       </component>
@@ -34,7 +35,7 @@
       </component>
       <component id="f01ba" class="javax.swing.JButton" binding="btnLogin">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Log in"/>
@@ -42,7 +43,7 @@
       </component>
       <component id="cc9c6" class="javax.swing.JLabel" binding="labelPwd">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Password"/>
